--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto mr-4">
                 <li class="nav-item mr-3">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-dark" href="#">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mr-3">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link text-dark" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link text-dark" href="#">Portfolio</a>
                 </li>
             </ul>
         </div>
