--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!--Bootstrap and Style sheets-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/a5e8346062.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/styles.css" />
 
     <!--Google Fonts-->
@@ -47,6 +49,12 @@
     <section class="welcome">
         <h1>Hi, I'm Ben</h1>
         <h2>A software developer</h2>
+        <i class="fas fa-angle-down arrow"></i>
+    </section>
+
+    <section class="tech">
+        <h1>Technologies I use</h1>
+        <img src="assets/img/tech.png" alt="html css javascript">
     </section>
 
     <!--Bootstrap Scripts-->
