--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto mr-4">
                 <li class="nav-item mr-3">
-                    <a class="nav-link text-dark" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white" href="#about">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mr-3">
-                    <a class="nav-link text-dark" href="#">Contact</a>
+                    <a class="nav-link text-white" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Portfolio</a>
+                    <a class="nav-link text-white" href="#">Portfolio</a>
                 </li>
             </ul>
         </div>
@@ -45,7 +45,6 @@
 
 
     <!--Welcome Section-->
-
     <section class="welcome">
 
         <h1>Hi, I'm Ben</h1>
@@ -54,7 +53,7 @@
 
     </section>
         
-
+    <!--Tech I Use-->
     <section class="tech">
                 <div class="waves">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -70,9 +69,27 @@
                     </svg>
                 </div>
         <h1>Technologies I use</h1>
-        <img src="assets/img/tech.png" alt="html css javascript">
+        <div class="tech-icons">
+            <!--use font awesome icons instead-->
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-js"></i>
+            <i class="fab fa-sass"></i>
+            <!-- <img src="assets/img/tech.png" alt="html css javascript">
+            <img class="github" src="/assets/img/github.png" alt=""> -->
+        </div>
 
     </section>
+
+    <section class="about" id="about">
+        <h1>About Me</h1>
+        <p>
+            I’m a composer turned software developer. When I’m not coding, I enjoy spending time with my pug, Bill, and building
+            furniture.
+        </p>
+    </section>
+
+
 
     <!--Bootstrap Scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
