add new logo and finished all sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-            <img src="./assets/img/logo.png" width="80" height="80" alt="logo">
+            <img src="./assets/img/logoNew.png" width="80" height="80" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -86,10 +86,57 @@
         <h1>About Me</h1>
         <p>
             I’m a composer turned software developer. When I’m not coding, I enjoy spending time with my pug, Bill, and building
-            furniture.
+            furniture. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia obcaecati fugit ratione! A neque necessitatibus, fugit recusandae optio placeat repellendus quam veniam rerum, iste atque temporibus ipsam rem maxime nemo. <br> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus enim facere consectetur molestias perspiciatis, ipsam dolores deserunt minima delectus, esse asperiores nobis nostrum. Sequi repellat cumque eius quidem, temporibus pariatur. <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus asperiores cumque voluptates nihil quae tempore odio, quas placeat at reiciendis magni neque! Autem qui aut repellat explicabo? Vel, nostrum quas.
         </p>
     </section>
 
+
+    <!--Portfolio/Projects-->
+    <section class="portfolio" id="portfolio">
+        <h1>Portfolio</h1>
+        
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+
+
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </section>
+
+
+    <!--Contact/Footer-->
+    <section class="contact" id="contact">
+        <h1>Contact Me</h1>
+        <div class="contact-icons">
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fas fa-paper-plane"></i>
+        </div>
+    </section>
 
 
     <!--Bootstrap Scripts-->
