fixed footer spacing

--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
+                <h5 class="card-title">Tindog</h5>
+                <p class="card-text">A bootstrap website for a fictional dating app for dogs.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
@@ -135,9 +134,8 @@
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
+                <h5 class="card-title">Drum Site</h5>
+                <p class="card-text">A website that uses javascript as a drum sampler.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
@@ -157,7 +155,7 @@
     <!--Contact/Footer-->
     <section class="contact" id="contact">
         <h1>Contact Me</h1>
-        <div class="contact">
+        <div class="contact-icons">
             <i class="fab fa-linkedin"></i>
             <i class="fab fa-twitter"></i>
             <i class="fas fa-paper-plane"></i>
@@ -177,3 +175,4 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
