--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a5e8346062.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css"/>
 
     <title>Ben Daniels</title>
 </head>
@@ -121,32 +121,29 @@
             </svg>
         </div>
         <h1>Portfolio</h1>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card" style="width: 30rem;">
+            <img class="card-img-top" src="./assets/img/tindog.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Tindog</h5>
                 <p class="card-text">A bootstrap website for a fictional dating app for dogs.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
 
 
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 30rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Drum Site</h5>
                 <p class="card-text">A website that uses javascript as a drum sampler.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 30rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                     content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
     </section>
