add another card

--- a/index.html
+++ b/index.html
@@ -139,11 +139,10 @@
         </div>
 
         <div class="card" style="width: 30rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                    content.</p>
+                <h5 class="card-title">Simon simon-game</h5>
+                <p class="card-text">This is a Simon game clone that includes audio files. You press any button to start and a new pattern is auto generated.</p>
             </div>
         </div>
     </section>
