add github links to cards, made cards responsive

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
         </div>
         <h1>About Me</h1>
         <p>
-            I’m a composer turned software developer. When I’m not coding, I enjoy spending time with my pug, Bill, and building
-            furniture. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia obcaecati fugit ratione! A neque necessitatibus, fugit recusandae optio placeat repellendus quam veniam rerum, iste atque temporibus ipsam rem maxime nemo. <br> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus enim facere consectetur molestias perspiciatis, ipsam dolores deserunt minima delectus, esse asperiores nobis nostrum. Sequi repellat cumque eius quidem, temporibus pariatur. <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus asperiores cumque voluptates nihil quae tempore odio, quas placeat at reiciendis magni neque! Autem qui aut repellat explicabo? Vel, nostrum quas.
+            I’m a composer turned software developer. When I’m not coding, I enjoy spending time with my pug, Bill, and building furniture. I became interested in coding after taking a course in generative media during my time in graduate school. The students were encouraged to work in different technologies and I was exposed to a bit of software called Max/MSP, which allows a user to physically connect different little tools with virtual cables, like a sort of mad scientist. The feeling of accomplishment after toiling for hours to get something to work and to display what I wanted on a screen (a generative poem, for example), was something novel to me at the time and I started to think about what a career in software might mean to me...<a href="#">[more]</a>
         </p>
     </section>
 
@@ -121,30 +120,48 @@
             </svg>
         </div>
         <h1>Portfolio</h1>
-        <div class="card col-" style="width: 30rem;">
-            <img class="card-img-top" src="./assets/img/tin-dog.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Tindog</h5>
-                <p class="card-text">A bootstrap website for a fictional dating app for dogs.</p>
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Simon Game</h5>
+                            <p class="card-text">A Javascript version of the classic game!!</p>
+                            <a href="#"><i class="fab fa-github github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img class="card-img-top" src="./assets/img/tin-dog.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">TinDog</h5>
+                            <p class="card-text">A dating app for dogs! Showcasing my HTML/CSS/Bootstrap abilities.</p>
+                            <a href="#"><i class="fab fa-github github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img class="card-img-top" src="./assets/img/drum-kit.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Drum Kit</h5>
+                            <p class="card-text">A browser based drum sampler using javascript to trigger sounds!</p>
+                            <a href="#"><i class="fab fa-github github"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
+ 
 
-        <div class="card" style="width: 30rem;">
-            <img class="card-img-top" src="./assets/img/drum-kit.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Drum Site</h5>
-                <p class="card-text">A website that uses javascript as a drum sampler.</p>
-            </div>
-        </div>
 
-        <div class="card" style="width: 30rem;">
-            <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Simon simon-game</h5>
-                <p class="card-text">This is a Simon game clone that includes audio files. You press any button to start and a new pattern is auto generated.</p>
-            </div>
-        </div>
+
+
+
     </section>
 
 
