--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="contact-icons">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fas fa-paper-plane"></i></a>
+            <a href="#"><i class="fas fa-github"></i></a>
         </div>
     </section>
 
