update social links

--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
     <section class="contact" id="contact">
         <h1>Contact Me</h1>
         <div class="contact-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fas fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/benjamin-daniels-ph-d-007b18113/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/benjamindaniels21"><i class="fab fa-github"></i></a>
         </div>
     </section>
 
