--- a/index.html
+++ b/index.html
@@ -123,13 +123,25 @@
         
         <div class="container">
             <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top" src="./assets/img/NFM.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">NFM Indoor Percussion</h5>
+                                <p class="card-text">A webapp for the members of NFM Indoor Percussion</p>
+                                <a href="https://github.com/benjamindaniels21/NFM-Indoor-Site"><i class="fab fa-github github"></i></a>
+                                <a href="#"><i class="fas fa-globe github"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 <div class="col-md-4">
                     <div class="card" >
                         <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Simon Game</h5>
                             <p class="card-text">A Javascript version of the classic game!!</p>
-                            <a href="#"><i class="fab fa-github github"></i></a>
+                            <a href="https://github.com/benjamindaniels21/Simon-Game-"><i class="fab fa-github github"></i></a>
+                            <a href="https://simon-game-daniels.netlify.app/"><i class="fas fa-globe github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -140,6 +152,7 @@
                             <h5 class="card-title">TinDog</h5>
                             <p class="card-text">A dating app for dogs! Showcasing my HTML/CSS/Bootstrap abilities.</p>
                             <a href="#"><i class="fab fa-github github"></i></a>
+                            <a href="#"><i class="fas fa-globe github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -150,6 +163,7 @@
                             <h5 class="card-title">Drum Kit</h5>
                             <p class="card-text">A browser based drum sampler using javascript to trigger sounds!</p>
                             <a href="#"><i class="fab fa-github github"></i></a>
+                            <a href="#"><i class="fas fa-globe github"></i></a>
                         </div>
                     </div>
                 </div>
