--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                                 <h5 class="card-title">NFM Indoor Percussion</h5>
                                 <p class="card-text">A webapp for the members of NFM Indoor Percussion</p>
                                 <a href="https://github.com/benjamindaniels21/NFM-Indoor-Site"><i class="fab fa-github github"></i></a>
-                                <a href="#"><i class="fas fa-globe github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -151,8 +150,8 @@
                         <div class="card-body">
                             <h5 class="card-title">TinDog</h5>
                             <p class="card-text">A dating app for dogs! Showcasing my HTML/CSS/Bootstrap abilities.</p>
-                            <a href="#"><i class="fab fa-github github"></i></a>
-                            <a href="#"><i class="fas fa-globe github"></i></a>
+                            <a href="https://github.com/benjamindaniels21/TinDog"><i class="fab fa-github github"></i></a>
+                             <a href="https://tinder-doggos.netlify.app/"><i class="fas fa-globe github"></i></a>
                         </div>
                     </div>
                 </div>
