update project links

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <h1>About Me</h1>
         <p>
-            I’m a composer turned software developer. When I’m not coding, I enjoy spending time with my pug, Bill, and building furniture. I became interested in coding after taking a course in generative media during my time in graduate school. The students were encouraged to work in different technologies and I was exposed to a bit of software called Max/MSP, which allows a user to physically connect different little tools with virtual cables, like a sort of mad scientist. The feeling of accomplishment after toiling for hours to get something to work and to display what I wanted on a screen (a generative poem, for example), was something novel to me at the time and I started to think about what a career in software might mean to me...<a href="#">[more]</a>
+            I'm a composer turned software developer. When I'm not coding, I enjoy spending time with my pug, Bill, and building furniture. I became interested in software development after taking a course in generative media during my time in graduate school. In the course we were encouraged to work in different technologies and I was exposed to a bit of software called Max/MSP, which allows a user to physically connect different tools with virtual cables, like a sort of mad scientist. The feeling of accomplishment after toiling for hours to get something to work and to display what I wanted on a screen (a generative poem, for example), was rewarding to me and I started to think about what a career in software might mean to me. <br><br> After finishing my PhD and teaching for a few years I decided that software development might be a worthwhile career path. The continual growth, constant learning, and problem solving excited me so in the summer of 2021 I joined a coding bootcamp. I finished the bootcamp in Janurary of 2022 and I am currently looking for my first role as a software developer.</a>
         </p>
     </section>
 
@@ -125,44 +125,49 @@
             <div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./assets/img/NFM.png" alt="Card image cap">
+                            <a href="https://github.com/benjamindaniels21/NFM-Indoor-Site">
+                                <img class="card-img-top" src="./assets/img/NFM.png" alt="Card image cap">  
+                            </a>
                             <div class="card-body">
                                 <h5 class="card-title">NFM Indoor Percussion</h5>
-                                <p class="card-text">A webapp for the members of NFM Indoor Percussion</p>
+                                <p class="card-text">A web app for the members of North Fort Myers Indoor Percussion</p>
                                 <a href="https://github.com/benjamindaniels21/NFM-Indoor-Site"><i class="fab fa-github github"></i></a>
                             </div>
                         </div>
                     </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
+                        <a href="https://simon-game-daniels.netlify.app/">
+                            <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
+                        </a>
                         <div class="card-body">
                             <h5 class="card-title">Simon Game</h5>
                             <p class="card-text">A Javascript version of the classic game!!</p>
                             <a href="https://github.com/benjamindaniels21/Simon-Game-"><i class="fab fa-github github"></i></a>
-                            <a href="https://simon-game-daniels.netlify.app/"><i class="fas fa-globe github"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="./assets/img/tin-dog.png" alt="Card image cap">
+                        <a href="https://tinder-doggos.netlify.app/">
+                            <img class="card-img-top" src="./assets/img/tin-dog.png" alt="Card image cap">
+                        </a>
                         <div class="card-body">
                             <h5 class="card-title">TinDog</h5>
                             <p class="card-text">A dating app for dogs! Showcasing my HTML/CSS/Bootstrap abilities.</p>
                             <a href="https://github.com/benjamindaniels21/TinDog"><i class="fab fa-github github"></i></a>
-                             <a href="https://tinder-doggos.netlify.app/"><i class="fas fa-globe github"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card" >
-                        <img class="card-img-top" src="./assets/img/drum-kit.png" alt="Card image cap">
+                        <a href="https://little-drummer-boy.netlify.app/">
+                            <img class="card-img-top" src="./assets/img/drum-kit.png" alt="Card image cap">
+                        </a>
                         <div class="card-body">
                             <h5 class="card-title">Drum Kit</h5>
                             <p class="card-text">A browser based drum sampler using javascript to trigger sounds!</p>
-                            <a href="#"><i class="fab fa-github github"></i></a>
-                            <a href="#"><i class="fas fa-globe github"></i></a>
+                            <a href="https://github.com/benjamindaniels21/Drum-Machine"><i class="fab fa-github github"></i></a>
                         </div>
                     </div>
                 </div>
