--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <img class="card-img-top" src="./assets/img/simon-game.png" alt="Card image cap">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">Simon Game</h5>
+                            <h5 class="card-title">The Simon Game</h5>
                             <p class="card-text">A Javascript version of the classic game!!</p>
                             <a href="https://github.com/benjamindaniels21/Simon-Game-"><i class="fab fa-github github"></i></a>
                         </div>
@@ -166,7 +166,7 @@
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Drum Kit</h5>
-                            <p class="card-text">A browser based drum sampler using javascript to trigger sounds!</p>
+                            <p class="card-text">A browser based drum sampler using javascript to trigger sounds. Harness your inner Ringo Starr!</p>
                             <a href="https://github.com/benjamindaniels21/Drum-Machine"><i class="fab fa-github github"></i></a>
                         </div>
                     </div>
